deployment/Deployment_apps_v1_tankrank_tank-rating-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"tank-rating-web:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"tank-rating-web\")].image","pause":""}]'
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: tank-rating-web
    app.kubernetes.io/component: tank-rating-web
    app.kubernetes.io/instance: tank-rating-web
  name: tank-rating-web
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: tank-rating-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: tank-rating-web
    spec:
      containers:
      - env:
        - name: API
          value: http://tank-rating-api:8080
        image: image-registry.openshift-image-registry.svc:5000/tankrank/tank-rating-web@sha256:47a784219982438be5c8709946b6c8bcbcf0afdde06526c318b25f63be005523
        imagePullPolicy: IfNotPresent
        name: tank-rating-web
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
