deployment/Service__v1_tankrank_rating-api.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: rating-api
    app.kubernetes.io/component: rating-api
    app.kubernetes.io/instance: rating-api
  name: rating-api
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: rating-api
  sessionAffinity: None
  type: ClusterIP
