deployment/Service__v1_tankrank_tank-rating-api.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: tank-rating-api
    app.kubernetes.io/component: tank-rating-api
    app.kubernetes.io/instance: tank-rating-api
  name: tank-rating-api
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    deployment: tank-rating-api
  sessionAffinity: None
  type: ClusterIP
