deployment/NetworkPolicy_networking.k8s.io_v1_tankrank_api-allow-from-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  name: api-allow-from-web
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: tank-rating-web
  podSelector:
    matchLabels:
      app: tank-rating-api
  policyTypes:
  - Ingress
